fix(styles): add z-index for FeaturedPost for Blog page

--- a/src/components/pages/blog/featured-post/featured-post.module.scss
+++ b/src/components/pages/blog/featured-post/featured-post.module.scss
@@ -1,5 +1,6 @@
 .wrapper {
   position: relative;
+  z-index: 0;
   padding-top: 50px;
   margin-top: $header-height;
   margin-bottom: 145px;
